# eks-workshop

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  RUNBOOK_SAMPLE_APP_EKS.md  TODO_EKS_SAMPLE_APP.md  buildspec-deploy.yaml  buildspec.yaml
.githooks/: commit-msg
.github/: .release-please-manifest.json  release-please-config.json  release-please-manifest.json
apps/sample_app/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
apps/sample_app/app/: main.py  utils.py
apps/sample_app/tests/: test_main.py  test_utils.py
argocd/: README.md
argocd/apps/: sample-app-dev.yaml
argocd/projects/: sample-app.yaml
charts/sample-app/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
charts/sample-app/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  prometheusrule.yaml  service.yaml  servicemonitor.yaml
infra/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/modules/eks/: main.tf  outputs.tf  variables.tf
infra/modules/network/: main.tf  variables.tf
k8s/cert-manager/: sample-app-selfsigned-certificate.yaml
k8s/logging/: fluent-bit-values.yaml
k8s/monitoring/: kube-prometheus-stack-values.yaml
k8s/sample_app/: configmap.yaml  deployment.yaml  kustomization.yaml  secret.yaml  service.yaml
releases/: v0.3.0.md  v0.4.0.md  v0.4.1.md
scripts/: generate_release_notes.py  lint_commit_msg.py
