[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-app"
version = "0.1.0"
description = "Sample FastAPI app for EKS learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi~=0.136.1",
  "uvicorn[standard]~=0.46.0",
  "boto3~=1.43.6",
]

[project.optional-dependencies]
test = [
  "pytest~=8.4.0",
  "httpx~=0.28.0",
]

[tool.setuptools]
packages = ["app"]
